
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at

#    https://www.apache.org/licenses/LICENSE-2.0

# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

add_subdirectory(API)
add_subdirectory(Catalogs)
add_subdirectory(Components)
add_subdirectory(Configurations)
add_subdirectory(Exceptions)
add_subdirectory(Spatial)
add_subdirectory(GRPC)
add_subdirectory(Monitoring)
add_subdirectory(Views)
add_subdirectory(Network)
add_subdirectory(Nodes)
add_subdirectory(Runtime)
add_subdirectory(Optimizer)
add_subdirectory(Operators)
add_subdirectory(Parsers)
add_subdirectory(Phases)
add_subdirectory(Plans)
add_subdirectory(QueryCompiler)
add_subdirectory(REST)
add_subdirectory(Sensors)
add_subdirectory(Sinks)
add_subdirectory(Sources)
add_subdirectory(Services)
add_subdirectory(Topology)
add_subdirectory(Util)
add_subdirectory(Windowing)
add_subdirectory(WorkQueues)
